Ajout du fonctionnement complet de la publication des posts

--- a/frontend/groupomania/src/app/SASS-utils/_utils.scss
+++ b/frontend/groupomania/src/app/SASS-utils/_utils.scss
@@ -9,7 +9,8 @@ $color-white: #fff;
 $color-black: #000;
 $color-invalid: #a5a4a4;
 $color-valid: rgb(0, 184, 34);
-$border-pill-shape-value : 100vmax;
+$color-blue: #21ABFF;
+$border-pill-shape-value: 100vmax;
 
 /*
 -------------------------MAPS------------------- $[map]: ([key]: [value], [key]:([other map]));
