--- a/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.scss
+++ b/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.scss
@@ -4,15 +4,15 @@
         @include center-flex;
         height: 250px;
         width: 100%;
-        outline: 1px solid yellowgreen;
         background-color: $color-secondary;
     }
     &__pfp-container {
-        background-color: yellow;
+        background-color: $color-white;
         height: 50%;
         min-width: 100px;
         max-width: 125px;
         overflow: hidden;
+        border: 4px solid $color-white;
         @include center-flex;
         border-radius: $border-pill-shape-value;
     }
@@ -32,10 +32,19 @@
         margin: 10px 0;
     }
     &__fieldset {
-        background-color: cyan;
+        background-color: $color-white;
         height: 100%;
-        width: 100%;
+        width: 95%;
         @include center-flex-column;
+        border: 0px;
+        border-radius: $border-pill-shape-value;
+    }
+    &__legend {
+        margin-left: 70px;
+        background-color: $color-primary;
+        border-radius: $border-pill-shape-value;
+        padding: 2px 5px;
+        color: $color-white;
     }
     &__title-input {
         height: 20%;
@@ -100,31 +109,71 @@
     }
 }
 
-#file-upload-button {
-    font-family: "Lato";
-    font-size: 16px;
-    @include rounded-inputs;
-    height: 35px;
-    width: 80%;
-    background-color: $color-primary;
-    color: #fff;
-    padding: 16px;
-    line-height: 0;
-    &:hover {
-        background-color: darken($color-primary, 10%);
-        cursor: pointer;
+.upload {
+    &-button {
+        display: none;
+        &--show {
+            display: block;
+        }
     }
-    &:active {
-        background-color: lighten($color-primary, 10%);
-    }
-    &--disabled {
-        background-color: $color-invalid;
+    &-label {
+        font-family: "Lato";
+        font-size: 16px;
+        overflow: hidden;
+        @include rounded-inputs;
+        @include center-flex;
+        height: 35px;
+        text-align: center;
+        width: 80%;
+        background-color: $color-primary;
+        color: #fff;
+        padding: 16px;
+        line-height: 0;
         &:hover {
-            background-color: $color-invalid;
-            cursor: not-allowed;
+            background-color: darken($color-primary, 10%);
+            cursor: pointer;
         }
         &:active {
-            background-color: $color-invalid;
+            background-color: lighten($color-primary, 10%);
         }
+        &--disabled {
+            background-color: $color-invalid;
+            &:hover {
+                background-color: $color-invalid;
+                cursor: not-allowed;
+            }
+            &:active {
+                background-color: $color-invalid;
+            }
+        }
+        &>i {
+            padding: 5px;
+        }
+    }
+}
+
+.test {
+    background-color: green;
+    color: #fff;
+}
+
+.image {
+    &__container {
+        display: flex;
+        flex-direction: row;
+        width: 100px;
+        height: 35%;
+    }
+    &-url {
+        aspect-ratio: 1;
+        border-radius: $border-pill-shape-value;
+        object-fit: cover;
+        border: 2px solid $color-white;
+    }
+    &-container {
+        overflow: hidden;
+        background-color: $color-white;
+        width: 100px;
+        height: 70px;
     }
 }
