Ajout des titres & description des posts'fetch'-és depuis le back-end + ajoute page 404

--- a/frontend/groupomania/src/app/SASS-utils/_utils.scss
+++ b/frontend/groupomania/src/app/SASS-utils/_utils.scss
@@ -2,7 +2,7 @@
 ---------------------VARIABLES----------------------- $[nom varaible]: [valeur];
 */
 
-$color-primary: #fe2b01;
+$color-primary: #FD2D01;
 $color-secondary: #FFD7D7;
 $color-tertiary: #4E5166;
 $color-white: #fff;
@@ -11,6 +11,8 @@ $color-invalid: #a5a4a4;
 $color-valid: rgb(0, 184, 34);
 $color-blue: #21ABFF;
 $border-pill-shape-value: 100vmax;
+$post-width-relative: 75%;
+$post-width-absolute: 500px;
 
 /*
 -------------------------MAPS------------------- $[map]: ([key]: [value], [key]:([other map]));
