--- a/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.html
+++ b/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.html
@@ -1,8 +1,8 @@
 <div class="groupomania__post">
-    <div class="groupomania__pfp-container">
+    <!-- <div class="groupomania__pfp-container">
         <img src="https://i.imgur.com/h564JHS.jpg" [alt]="" class="groupomania__pfp" />
         <p class="groupomania__pfp-name"></p>
-    </div>
+    </div> -->
     <div class="groupomania__form-container">
         <form class="groupomania__form" [formGroup]="postForm">
             <fieldset class="groupomania__fieldset">
@@ -38,8 +38,6 @@
         <img [src]="imageUrl" [alt]="file" class="image-url" *ngIf="imageUrl" />
     </div>
 </div>
-
-<p class="test">Test</p>
 
 <!----->
 
