--- a/frontend/groupomania/src/styles.scss
+++ b/frontend/groupomania/src/styles.scss
@@ -1,8 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-$color-primary: #fd2d01;
-$color-secondary: #ffd7d7;
-$color-tertiary: #4e5166;
+@import "./app/SASS-utils/utils";
 html {
     scroll-behavior: smooth;
 }
@@ -13,6 +11,55 @@ body {
     font-family: "Lato";
     font-weight: 400;
     color: $color-tertiary;
+}
+
+::-webkit-scrollbar {
+    background-color: transparent;
+    width: 15px;
+}
+
+::-webkit-scrollbar-button {
+    background-color: $color-tertiary;
+    display: none;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: $color-primary;
+    border-radius: $border-pill-shape-value;
+    border: 1px solid $color-secondary;
+    &:hover {
+        background-color: darken($color-primary, 10%);
+    }
+    &:active {
+        background-color: lighten($color-primary, 10%);
+    }
+}
+
+// ::-webkit-scrollbar-track {
+//     background-color: yellow;
+//     margin-block: 0.1em;
+//     border-radius: $border-pill-shape-value;
+// }
+::-webkit-scrollbar-track-piece {
+    background-color: $color-secondary;
+    border-left: 1px solid $color-tertiary;
+    &:hover {
+        background-color: darken($color-secondary, 10%);
+    }
+    &:active {
+        background-color: lighten($color-secondary, 10%);
+    }
+}
+
+::-webkit-scrollbar-corner {
+    background-color: $color-tertiary;
+}
+
+@supports (scrollbar-color: red blue) {
+    * {
+        scrollbar-color: $color-primary $color-secondary;
+        scrollbar-width: thin;
+    }
 }
 
 *,
