Ajout du contenu des commentaires sous les posts

--- a/frontend/groupomania/src/app/header/header.component.html
+++ b/frontend/groupomania/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header--flex header">
-    <a class="header__link">
+    <a class="header__link" (click)="logout()">
         <img src="../../assets/icon-left-font.webp" alt="Logo Groupomania" class="header__image" title="Retourner à la page d'accueil?" routerLink="/" />
     </a>
 
