--- a/frontend/groupomania/src/app/post-comments/post-comments.component.html
+++ b/frontend/groupomania/src/app/post-comments/post-comments.component.html
@@ -1,1 +1,6 @@
-<p>Comments</p>
+<div class="comment">
+    <h3 class="comment__username"></h3>
+    <p class="comment__comment">
+        {{ commentComment }}
+    </p>
+</div>
