Ajout de style et de balises sémantiques aux components

--- a/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.html
+++ b/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.html
@@ -39,7 +39,6 @@
     </div>
 </div>
 
-<!----->
-
-<!----->
-<app-published-posts *ngFor="let postElement of postsArray" [post]="postElement"></app-published-posts>
+<main>
+    <app-published-posts *ngFor="let postElement of postsArray" [post]="postElement"></app-published-posts>
+</main>
