--- a/frontend/groupomania/src/app/published-posts/published-posts.component.html
+++ b/frontend/groupomania/src/app/published-posts/published-posts.component.html
@@ -19,8 +19,8 @@
                 </p>
             </div>
             <div class="post__image-container" *ngIf="postImageUrl !== null">
-                <img [src]="postImageUrl" alt="Image de post" *ngIf="postImageUrl !== null" />
-                <!-- <img src="https://i.imgur.com/h564JHS.jpg" alt="bruh" *ngIf="test === true" /> -->
+                <!-- <img [src]="postImageUrl" alt="Image de post" *ngIf="postImageUrl !== null" /> -->
+                <img src="https://i.imgur.com/h564JHS.jpg" alt="bruh" />
             </div>
         </div>
     </header>
