--- a/frontend/groupomania/src/app/post-comments/post-comments.component.html
+++ b/frontend/groupomania/src/app/post-comments/post-comments.component.html
@@ -1,5 +1,5 @@
 <div class="comment">
-    <h3 class="comment__username"></h3>
+    <h3 class="comment__username">TEST:</h3>
     <p class="comment__comment">
         {{ commentComment }}
     </p>
