Ajout de balises data pour les commentaires

--- a/frontend/groupomania/src/app/post-comments/post-comments.component.html
+++ b/frontend/groupomania/src/app/post-comments/post-comments.component.html
@@ -1,4 +1,4 @@
-<div class="comment">
+<div class="comment" [attr.data-userId]="commentUserId" tabindex="0">
     <h3 class="comment__username">TEST:</h3>
     <p class="comment__comment">
         {{ commentComment }}
