--- a/frontend/groupomania/src/app/login-page-component/login-page-component.component.scss
+++ b/frontend/groupomania/src/app/login-page-component/login-page-component.component.scss
@@ -162,6 +162,9 @@
     height: 85px;
     color: $color-white;
     @include center-flex;
+    @include mobile-only {
+        height: 150px;
+    }
     border-radius: 25px;
     background-color: darken($color-secondary, 55%);
     overflow: hidden;
@@ -174,12 +177,20 @@
     &__text {
         white-space: nowrap;
         text-overflow: ellipsis;
+        @include mobile-only {
+            white-space: break-spaces;
+            padding: 2%;
+            margin-left: 2%;
+        }
     }
 }
 
 .success-form {
     width: 100%;
     height: 85px;
+    @include mobile-only {
+        height: 150px;
+    }
     color: $color-white;
     @include center-flex;
     border-radius: 25px;
@@ -196,5 +207,10 @@
         color: black;
         white-space: nowrap;
         text-overflow: ellipsis;
+        @include mobile-only {
+            white-space: break-spaces;
+            padding: 2%;
+            margin-left: 2%;
+        }
     }
 }
