--- a/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.scss
+++ b/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.scss
@@ -5,6 +5,10 @@
         height: 250px;
         width: 100%;
         background-color: $color-secondary;
+        @include mobile-only {
+            flex-direction: column;
+            margin: 25px 0 25px 0;
+        }
     }
     &__pfp-container {
         background-color: $color-white;
@@ -33,6 +37,9 @@
     }
     &__fieldset {
         background-color: $color-white;
+        @include mobile-only {
+            width: 100%;
+        }
         height: 100%;
         width: 95%;
         @include center-flex-column;
@@ -54,6 +61,10 @@
         @include rounded-inputs;
         padding: 16px;
         background-color: $color-secondary;
+        @include mobile-only {
+            padding: min(3%, 16px);
+            height: 20px;
+        }
     }
     &__description-input {
         height: 20%;
@@ -63,6 +74,10 @@
         @include rounded-inputs;
         padding: 16px;
         background-color: $color-secondary;
+        @include mobile-only {
+            padding: min(3%, 16px);
+            height: 20px;
+        }
     }
     &__image-input {
         font-family: "Lato";
@@ -83,6 +98,10 @@
         font-family: "Lato";
         font-size: 16px;
         @include rounded-inputs;
+        @include mobile-only {
+            padding: min(3%, 16px);
+            height: 25px;
+        }
         height: 35px;
         width: 80%;
         background-color: $color-primary;
@@ -129,6 +148,10 @@
         color: #fff;
         padding: 16px;
         line-height: 0;
+        @include mobile-only {
+            padding: min(3%, 16px);
+            height: 15px;
+        }
         &:hover {
             background-color: darken($color-primary, 10%);
             cursor: pointer;
@@ -169,11 +192,40 @@
         border-radius: $border-pill-shape-value;
         object-fit: cover;
         border: 2px solid $color-white;
+        @include mobile-only {
+            width: 100%;
+            margin: 25px 0;
+        }
     }
     &-container {
         overflow: hidden;
         background-color: $color-white;
         width: 100px;
         height: 70px;
+    }
+}
+
+.return-to-top-page {
+    display: inline-flex;
+    width: 50px;
+    height: 50px;
+    z-index: 25;
+    justify-content: center;
+    align-items: center;
+    background-color: $color-tertiary;
+    border-radius: $border-pill-shape-value;
+    color: yellow;
+    position: fixed;
+    right: 25px;
+    bottom: 25px;
+    @include mobile-only {
+        width: 35px;
+        height: 35px;
+    }
+    &>i {
+        color: $color-white;
+        @include mobile-only {
+            font-size: 12px;
+        }
     }
 }
