Ajout des emails dans les commentaires, fix des images des posts et ajout de la dynamique en temps réel des posts + commentaires (!À FAIRE: -Ajouter la dynamique en temps réel -Créer les opés Update et delete des posts & commentaires -Ajouter les opés UD pour les admins/modos (modos Reddit)!)

--- a/frontend/groupomania/src/app/header/header.component.html
+++ b/frontend/groupomania/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       Connexion
     </button>
 
-        <button type="button" class="header__logout-button" routerLink="/posts" (click)="logout()" *ngIf="this.router.url === '/posts'">
+        <button type="button" class="header__logout-button" routerLink="/posts" (click)="logout()" *ngIf="this.router.url.includes('/posts')">
       Déconnexion
     </button>
     </form>
