--- a/frontend/groupomania/src/app/published-posts/published-posts.component.html
+++ b/frontend/groupomania/src/app/published-posts/published-posts.component.html
@@ -46,7 +46,7 @@
         </button>
             </fieldset>
         </form>
-        <aside class="comments" *ngIf="1 === 1">
+        <aside class="comments">
             <app-post-comments *ngFor="let commentElement of commentsArray" [comment]="commentElement"></app-post-comments>
         </aside>
     </div>
