--- a/frontend/groupomania/src/app/post-comments/post-comments.component.html
+++ b/frontend/groupomania/src/app/post-comments/post-comments.component.html
@@ -1,9 +1,8 @@
 <div class="comment" [attr.data-userId]="commentUserId" tabindex="0">
-    <h3 class="comment__username">Nom utilisateur</h3>
-    <p class="comment__comment">
-        {{ commentComment }}
-    </p>
-    <div class="comment_modify" *ngIf="1 === 1">
+    <h3 class="comment__username">{{ commentEmail }}</h3>
+    <p class="comment__comment">{{ commentComment }}</p>
+    <div class="comment_modify">
         <i class="fa-solid fa-ellipsis-vertical"></i>
+        <i class="fa-solid fa-trash-can"></i>
     </div>
 </div>
