--- a/frontend/groupomania/src/app/published-posts/published-posts.component.scss
+++ b/frontend/groupomania/src/app/published-posts/published-posts.component.scss
@@ -17,7 +17,6 @@
         background-color: $color-primary;
         max-height: 600px;
         flex-wrap: wrap;
-        overflow: hidden;
         overflow-wrap: break-word;
         display: flex;
         align-items: center;
@@ -32,16 +31,157 @@
         margin: 3% 5%;
         display: flex;
         justify-content: space-between;
+        align-items: baseline;
         max-height: 150px;
         width: 100%;
         white-space: nowrap;
+        @include mobile-only {
+            flex-wrap: wrap;
+        }
         // margin: 0 10px;
     }
+    &__modify {
+        margin: 0 5px;
+        height: 50px;
+        width: 80px;
+        border-radius: 250px;
+        border: 2px solid $color-white;
+        background-color: $color-primary;
+        color: $color-white;
+        font-family: "Lato";
+        &--activated {
+            background-color: $color-white;
+            color: $color-primary;
+            cursor: pointer;
+        }
+        &:hover {
+            background-color: $color-white;
+            color: $color-primary;
+        }
+        &:active {
+            background-color: darken($color-white, 15%);
+        }
+        @include tablet-only {
+            display: none;
+        }
+        @include mobile-only {
+            display: none;
+        }
+        &--mobile {
+            display: none;
+            &:hover {
+                background-color: $color-white;
+                color: $color-primary;
+                cursor: pointer;
+            }
+            &:active {
+                background-color: darken($color-white, 15%);
+            }
+            @include tablet-only {
+                display: block;
+                border-radius: $border-pill-shape-value;
+                color: $color-white;
+                background-color: $color-primary;
+                padding: 5px;
+                margin: 0 5px;
+                border: 2px solid $color-white;
+            }
+            @include mobile-only {
+                display: block;
+                border-radius: $border-pill-shape-value;
+                color: $color-white;
+                background-color: $color-primary;
+                padding: 5px;
+                margin: 0 5px;
+                border: 2px solid $color-white;
+            }
+        }
+    }
+    &__delete {
+        margin: 0 5px;
+        height: 50px;
+        width: 80px;
+        border-radius: 250px;
+        border: 2px solid $color-white;
+        background-color: $color-primary;
+        color: $color-white;
+        font-family: "Lato";
+        &:hover {
+            background-color: $color-white;
+            color: $color-primary;
+            cursor: pointer;
+        }
+        &:active {
+            background-color: darken($color-white, 15%);
+        }
+        @include tablet-only {
+            display: none;
+        }
+        @include mobile-only {
+            display: none;
+        }
+        &--mobile {
+            display: none;
+            &:hover {
+                background-color: $color-white;
+                color: $color-primary;
+                cursor: pointer;
+            }
+            &:active {
+                background-color: darken($color-white, 15%);
+            }
+            @include tablet-only {
+                display: block;
+                border-radius: $border-pill-shape-value;
+                color: $color-white;
+                background-color: $color-primary;
+                padding: 5px;
+                margin: 0 5px;
+                border: 2px solid $color-white;
+            }
+            @include mobile-only {
+                display: block;
+                border-radius: $border-pill-shape-value;
+                color: $color-white;
+                background-color: $color-primary;
+                padding: 5px;
+                margin: 0 5px;
+                border: 2px solid $color-white;
+            }
+        }
+    }
+    // &__change {
+    //     &-button {
+    //         font-size: 16px;
+    //         border-radius: 25px;
+    //         border: none;
+    //         outline: 2px dashed black;
+    //         margin: 5px 5px;
+    //         padding: 5px 10px;
+    //         background-color: $color-secondary;
+    //         color: $color-black;
+    //         line-height: 0;
+    //         &--activated {
+    //             @include mobile-only {
+    //                 margin: 15px 25%;
+    //             }
+    //             background-color: $color-white;
+    //             color: $color-primary;
+    //             cursor: pointer;
+    //         }
+    //         &:hover {
+    //             background-color: $color-white;
+    //             color: $color-primary;
+    //             cursor: pointer;
+    //         }
+    //     }
+    //     // &-icon {}
+    // }
     &__date {
         margin-left: 5px;
     }
     &__number-of-likes {
-        margin-right: 5px;
+        margin: 0 5px;
         text-align: right;
     }
     &__content {
@@ -68,9 +208,12 @@
         padding: 5px;
     }
     &__image-container {
-        max-height: 330px;
+        max-height: 380px;
         overflow: hidden;
+        background-color: $color-white;
+        @include center-flex-column;
         &>img {
+            height: 100%;
             max-width: 100%;
             object-fit: cover;
         }
@@ -217,4 +360,29 @@
 .comments {
     margin-bottom: 40px;
     border-radius: 5px 5px;
+}
+
+.dialog {
+    &__parent {
+        position: relative;
+        @include mobile-only {
+            display: flex;
+        }
+        @include tablet-only {
+            display: flex;
+        }
+    }
+    &__child {
+        @include center-flex-column;
+        position: absolute;
+        top: -30px;
+        @include tablet-only {
+            left: 20px;
+        }
+        left: -80px;
+        background-color: rgba(46, 241, 255, 0.5);
+        color: yellow;
+        outline: 2px dashed greenyellow;
+        background-color: green;
+    }
 }
