--- a/frontend/groupomania/src/app/published-posts/published-posts.component.html
+++ b/frontend/groupomania/src/app/published-posts/published-posts.component.html
@@ -9,14 +9,14 @@
             </p>
 
             <div class="dialog__parent" *ngIf="postUserId === userId">
-                <input type="button" value="Modifier" class="post__modify" />
-                <button title="Modifier le titre, description ou image" class="post__modify--mobile">
+                <input type="button" value="Modifier" class="post__modify" (click)="modifyPost()" />
+                <button title="Modifier le titre, description ou image" class="post__modify--mobile" (click)="modifyPost()">
           <i class="fas fa-edit"></i>
         </button>
-                <button title="Supprimer le post" class="post__delete--mobile">
+                <button title="Supprimer le post" class="post__delete--mobile" (click)="deletePost()">
           <i class="fas fa-trash-alt"></i>
         </button>
-                <input type="button" value="Supprimer" class="post__delete" />
+                <input type="button" value="Supprimer" class="post__delete" (click)="deletePost()" />
             </div>
         </div>
         <div class="post__content">
