--- a/frontend/groupomania/src/app/post-comments/post-comments.component.html
+++ b/frontend/groupomania/src/app/post-comments/post-comments.component.html
@@ -1,8 +1,12 @@
-<div class="comment" [attr.data-userId]="commentUserId" tabindex="0">
+<div class="comment" [attr.data-userId]="commentUserId" [attr.data-commentId]="commentCommentId" tabindex="0">
     <h3 class="comment__username">{{ commentEmail }}</h3>
     <p class="comment__comment">{{ commentComment }}</p>
-    <div class="comment_modify">
-        <i class="fa-solid fa-ellipsis-vertical"></i>
-        <i class="fa-solid fa-trash-can"></i>
+    <div class="comment__modify" *ngIf="commentUserId === userId">
+
+        <button title="Supprimer le post" class="comment__delete--mobile" (click)="deleteComment()">
+            <i class="fas fa-trash-alt"></i>
+        </button>
+        <input type="button" value="Supprimer" class="comment__delete" (click)="deleteComment()" />
     </div>
+
 </div>
