--- a/frontend/groupomania/src/app/post-comments/post-comments.component.scss
+++ b/frontend/groupomania/src/app/post-comments/post-comments.component.scss
@@ -18,4 +18,65 @@
         margin: 0 0 2% 5px;
         font-size: 1rem;
     }
+    &__modify {
+        @include center-flex;
+        padding: 0 0 5px 0;
+    }
+    &__delete {
+        height: 25px;
+        width: 50%;
+        border-radius: 250px;
+        border: 2px solid $color-white;
+        background-color: $color-primary;
+        color: $color-white;
+        font-family: "Lato";
+        &--activated {
+            background-color: $color-white;
+            color: $color-primary;
+            cursor: pointer;
+        }
+        &:hover {
+            background-color: $color-white;
+            color: $color-primary;
+            border: 2px solid $color-primary;
+        }
+        &:active {
+            background-color: darken($color-white, 15%);
+        }
+        @include tablet-only {
+            display: none;
+        }
+        @include mobile-only {
+            display: none;
+        }
+        &--mobile {
+            display: none;
+            &:hover {
+                background-color: $color-white;
+                color: $color-primary;
+                cursor: pointer;
+            }
+            &:active {
+                background-color: darken($color-white, 15%);
+            }
+            @include tablet-only {
+                display: block;
+                border-radius: $border-pill-shape-value;
+                color: $color-white;
+                background-color: $color-primary;
+                padding: 5px;
+                margin: 0 5px;
+                border: 2px solid $color-white;
+            }
+            @include mobile-only {
+                display: block;
+                border-radius: $border-pill-shape-value;
+                color: $color-white;
+                background-color: $color-primary;
+                padding: 5px;
+                margin: 0 5px;
+                border: 2px solid $color-white;
+            }
+        }
+    }
 }
