Ajout de la fonctionnalité de la suppression des commentaires (NE RESTE PLUS QU'À FAIRE LES OPERATIONS CRUS POUR LES ADMINS!!!!!!)

--- a/frontend/groupomania/src/app/published-posts/published-posts.component.html
+++ b/frontend/groupomania/src/app/published-posts/published-posts.component.html
@@ -58,7 +58,7 @@
             </fieldset>
         </form>
         <aside class="comments">
-            <app-post-comments *ngFor="let commentElement of commentsArray" [comment]="commentElement" (event)="onRequestReceive($event)"></app-post-comments>
+            <app-post-comments *ngFor="let commentElement of commentsArray" [comment]="commentElement" [postId]="postPostId" (event)="onRequestReceive($event)"></app-post-comments>
         </aside>
     </div>
 </section>
